# Lattice-Boltzmann-Method-for-HPC-Fluid-Dynamics

./: .gitignore  CMakeLists.txt  LICENSE  README.md  temp.hpp
include/: boundary.hpp  descriptor.hpp  lattice.hpp  solver.hpp
include/LBM/: LBM.hpp  boundary.hpp  descriptor.hpp  lattice.hpp  solver.hpp
scripts/: job_script.sh
src/: Lattice.cpp  boundary.cpp  cluster_main.cpp  lattice.cpp  main  main.cpp  main2D.cpp  main3D.cpp  solver.cpp
src/LBM/: CMakeLists.txt  boundary.cpp  lattice.cpp  solver.cpp
test/: CMakeLists.txt  lattice_test_D2Q9.cpp  test_ghia_Re100_2D.cpp
testing/: CMakeLists.txt  lattice_test_2DQ9.cpp  lattice_test_D2Q9.cpp
